# order-tracking-FastAPI

./: .gitignore  docker-compose.yml
bff-service/: Dockerfile  buf.gen.yaml  generate_protos.sh  main.py  pyproject.toml
bff-service/src/api/: dependencies.py  exceptions.py  responses.py
bff-service/src/api/docs/: openapi.py
bff-service/src/api/v1/routers/: catalog.py  order.py
bff-service/src/api/v1/schemas/: schema.py
bff-service/src/application/: exceptions.py
bff-service/src/application/dtos/: catalog_dto.py  orders_dto.py  pagination.py
bff-service/src/application/ports/: catalog_gateway.py  orders_gateway.py  pricing_gateway.py
bff-service/src/application/usecases/: cancel_order.py  create_order.py  get_order.py  get_order_summary.py  get_paginated_products.py  update_order.py
bff-service/src/config/: logging.py  settings.py
bff-service/src/infra/gateways/: grpc_catalog.py  grpc_orders.py  grpc_pricing.py
bff-service/src/infra/gateways/mappers/: error_mapper.py
catalog/: Dockerfile  alembic.ini  buf.yaml  generate_protos.sh  main.py  pyproject.toml
catalog/src/config/: db.py  settings.py
catalog/src/domain/: exceptions.py
catalog/src/infra/: utils.py
orders/: Dockerfile  alembic.ini  generate_protos.sh  main.py  pyproject.toml
orders/src/config/: db.py  logging.py  settings.py
orders/src/domain/: constants.py  exceptions.py
pricing/: Dockerfile  exceptions.py  generate_protos.sh  main.py  pyproject.toml
pricing/protos/: pricing.proto
pricing/protos/shared_protos/: catalog.proto  orders.proto
pricing/src/config/: settings.py
(+56 files in other folders)
