[tool.poetry]
name = "bff-service"
version = "1.0.0"

packages = [
    { include = "src" },
    { include = "generated" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
asgiref="^3.8.1"
bcrypt="^4.1.2"
certifi="^2024.2.2"
distlib="^0.3.8"
email-validator="^2.1.1"
fastapi-mail="^1.4.1"
fastapi-utilities="^0.2.0"
greenlet="^3.0.3"
h11="^0.14.0"
httpx="^0.27.0"
isort="^5.13.2"
MarkupSafe="^2.1.5"
pipenv="^2023.12.1"
polyfactory="^2.15.0"
pydantic="^2.6.4"
python-dateutil="^2.9.0.post0"
python-dotenv="^1.0.1"
python-jose="^3.3.0"
python-multipart="^0.0.9"
regex="^2023.12.25"
six="^1.16.0"
starlette="^0.37.2"
uvicorn="^0.29.0"
grpcio="1.62.1"
grpcio-tools="1.62.0"
protovalidate="0.3.1"
protobuf="4.25.3"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
pytest = "^8.1.1"
pytest-mock="^3.14.0"